# libdump

./: CMakeLists.txt  Makefile  Makefile.linux  Makefile.win32  README  dump.vcproj  libdump.c  libdump.h
include/makestuff/: libdump.h
src/: libdump.c
